--- a/parte1/postit.css
+++ b/parte1/postit.css
@@ -13,7 +13,7 @@ body {
   gap: 2rem;
   margin: 3rem;
   background-color: #666666;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Indie Flower";
 }
 .postIt {
   width: 230px;
@@ -44,38 +44,59 @@ p {
 .n1 {
   transform: rotate(-8deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 1s;
+  scale: 1;
 }
 .n2 {
   transform: rotate(+7deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 1500ms;
 }
 .n3 {
   transform: rotate(-6deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 2s;
 }
 .n4 {
   transform: rotate(10deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 2500ms;
 }
 .n5 {
   transform: rotate(-8deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 3s;
 }
 .n6 {
   transform: rotate(-4deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 3500ms;
 }
 .n7 {
   transform: rotate(-3deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 4s;
 }
 .n8 {
   transform: rotate(9deg);
   transition: 300ms;
+  animation: fadeScaleIn 1s backwards 4500ms;
 }
 .postIt:hover {
   transform: rotate(0);
   scale: 1.3;
   transition: scale 300ms, transform 300ms;
   z-index: 1000;
+}
+
+@keyframes fadeScaleIn {
+  from {
+    opacity: 0;
+    transform: rotate(0deg);
+    scale: 0.8;
+  }
+  to {
+    opacity: 1;
+    scale: 1;
+  }
 }
