--- a/parte2/frase.css
+++ b/parte2/frase.css
@@ -25,23 +25,48 @@ main {
   margin-top: 3rem;
   line-height: 1.5rem;
 }
+#testoAlternato {
+  /* overflow: hidden; */
+  position: relative;
+}
 i {
   color: #009dff;
   display: block;
+  position: absolute;
+  bottom: 0;
+  transform: translate(191px, -19px);
+  animation: rollWords 3s 1s infinite;
+  opacity: 0;
 }
-span {
-  display: inline-block;
+
+.parole i:nth-child(2) {
+  transform: translate(191px, -19px);
+  animation: rollWords 3s 2s infinite;
+}
+.parole i:nth-child(3) {
+  transform: translate(191px, -19px);
+  animation: rollWords 3s 3s infinite;
 }
 
 @keyframes rollWords {
   0% {
     opacity: 0;
-    transform: translate(-1px);
+    transform: translate(191px, -20px);
+  }
+  25% {
+    opacity: 1;
+    transform: translate(191px, 0px);
   }
   50% {
-    opacity: 1;
+    opacity: 0;
+    transform: translate(191px, 20px);
+  }
+  75% {
+    opacity: 0;
+    transform: translate(191px, 40px);
   }
   100% {
     opacity: 0;
+    transform: translate(191px, 60px);
   }
 }
